--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ NEXTAUTH_URL="http://localhost:3000"
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
 DISCORD_PUBLIC_KEY=""
+
+# uploadthing
+UPLOADTHING_SECRET=""
+UPLOADTHING_APP_ID=""
